--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -517,3 +517,25 @@ user.password.required.characters=자 이상 필수
 user.password.characters=자
 user.status.use=사용중
 user.status.unused=미사용
+
+
+
+data.not.exist=Data가 존재하지 않습니다.
+data.object.does.not.exist=데이터 오브젝트가 존재하지 않습니다.
+
+data.lock=잠금
+data.lock.release=잠금 해제
+data.all.delete=일괄삭제
+data.all.insert=일괄등록(File)
+data.attribute.insert=속성 일괄 등록
+data.object.attribute.insert=Object 속성 일괄 등록
+data.upload.file=파일올리기
+data.file.save=파일저장
+data.control.properties=제어속성
+data.origin.properties=Origin 속성
+data.object.properties=Object 속성
+data.insert.date=등록일
+data.does.not.exist=데이터가 존재하지 않습니다.
+data.status.use=사용중
+data.status.unused=미사용
+data.status.etc=기타
