--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -83,6 +83,7 @@ basic=기본
 default.value=기본값
 execute=실행
 total.count=총건수
+total.number=총 건수
 parse.success.count=Parse 성공 건수
 parse.error.count=Parse 실패 건수
 insert.success.count=등록 성공 건수
