--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -141,6 +141,7 @@ main.issue.newissue=신규 이슈
 main.issue.ongoingissue=진행중인 이슈
 main.issue.completedissue=완료된 이슈
 main.status.project.data=프로젝트 데이터 현황
+main.status.data.group=데이터 그룹 현황
 main.status.use.data=데이터 상태별 현황
 main.status.data.log=데이터 변경 요청 이력
 main.status.userstatus=사용자 상태별 상황
@@ -148,6 +149,10 @@ main.status.moreuserstatus=사용자 상태별 상황 더보기
 main.status.schedule.execution=스케줄 실행 사용 이력
 main.status.schedule.moreexecution=스케줄 실행 이력 더보기
 main.status.schedule.date=년 최근 7건
+main.status.schedule.moreexecution=시민 참여 현황 더보기
+main.status.civilvoice.data=시민 참여 현황
+main.status.civilvoice.moreexecution=시민 참여 현황 더보기
+main.status.civilvoice.date=년 최근 7건
 main.status.user.tracking=사용자 추적
 main.status.user.moretracking=사용자 추적 이력 더보기
 main.status.db.connection.pool=DB Connection Pool 현황
@@ -171,6 +176,7 @@ main.status.dormancy=휴면
 main.status.expires=기간만료
 main.status.temporary.password=임시비밀번호
 main.status.no.schedule=스케줄 실행 이력이 존재하지 않습니다.
+main.status.no.civilvoice=시민 참여 현황이 존재하지 않습니다.
 main.status.no.user.tracking=사용자 추적 이력이 존재하지 않습니다.
 
 
