관리자 - 시민 참여 코드 정리

--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -140,6 +140,10 @@ main.issue.issuestatus=이슈 현황
 main.issue.newissue=신규 이슈
 main.issue.ongoingissue=진행중인 이슈
 main.issue.completedissue=완료된 이슈
+main.data.status=데이터 현황
+main.data.new=신규 업로드 건수
+main.data.success=변환 성공 건수
+main.data.fail=변환 실패 건수
 main.status.project.data=프로젝트 데이터 현황
 main.status.data.group=데이터 그룹 현황
 main.status.use.data=데이터 상태별 현황
@@ -370,7 +374,7 @@ config.single.information=개인정보 마스킹 처리
 config.file=파일
 config.one.year=1년
 config.two.year=2년
-config.permanent.storage=영구보관 
+config.permanent.storage=영구보관
 config.main.widget.count=메인 화면 위젯 표시 개수
 config.main.screen=메인 화면 갱신 간격
 config.basic.search=통계 기본 검색 기간
