--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -148,8 +148,8 @@ main.status.project.data=프로젝트 데이터 현황
 main.status.data.group=데이터 그룹 현황
 main.status.use.data=데이터 상태별 현황
 main.status.data.log=데이터 변경 요청 이력
-main.status.userstatus=사용자 상태별 상황
-main.status.moreuserstatus=사용자 상태별 상황 더보기
+main.status.userstatus=사용자 상태별 현황
+main.status.moreuserstatus=사용자 상태별 현황 더보기
 main.status.schedule.execution=스케줄 실행 사용 이력
 main.status.schedule.moreexecution=스케줄 실행 이력 더보기
 main.status.schedule.date=년 최근 7건
