관리자 - 그룹 등록시 그룹키 중복 체크

--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -550,3 +550,9 @@ data.does.not.exist=데이터가 존재하지 않습니다.
 data.status.use=사용중
 data.status.unused=미사용
 data.status.etc=기타
+
+# group
+group.key.empty=그룹Key를 입력하여 주십시오.
+group.key.duplication=사용중인 값 입니다. 다른 그룹Key를 입력해 주십시오.
+group.key.enable=사용 가능한 그룹Key 입니다.
+check.group.key.duplication=그룹Key 중복확인을 해주십시오.
