관리자 - 대시보드 범례 옵션 수정

--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -145,7 +145,7 @@ main.data.new=신규 업로드 건수
 main.data.success=변환 성공 건수
 main.data.fail=변환 실패 건수
 main.status.project.data=프로젝트 데이터 현황
-main.status.data.group=데이터 그룹 현황
+main.status.data.group=데이터 그룹별 현황
 main.status.use.data=데이터 상태별 현황
 main.status.data.log=데이터 변경 요청 이력
 main.status.userstatus=사용자 상태별 현황
