--- a/ndtp-user/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-user/src/main/resources/messages/messages_ko.properties
@@ -45,6 +45,7 @@ use.not=공개유무
 insert.type=등록유형
 modified.and.insert=수정/삭제
 modified=수정
+modified.requset=수정 요청
 deadline=마감일
 contant=내용
 attachments=첨부 파일
@@ -540,3 +541,5 @@ data.does.not.exist=데이터가 존재하지 않습니다.
 data.status.use=사용중
 data.status.unused=미사용
 data.status.etc=기타
+data.transform.save=위치/회전 변경
+data.transform.save.request=위치/회전 변경 요청
