관리자 페이지 Converter 실행 혹은 데이터 수정 시 데이터 변경 이력(data_info_log) 남기도록 수정

--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -31,7 +31,7 @@ no.use=사용안함
 not.use=미사용
 cancel=취소기간
 all=전체
-all.d=전체:
+all.d=전체 :
 key=Key
 latitude=위도
 longitude=경도
@@ -45,6 +45,7 @@ use.not=공개유무
 insert.type=등록유형
 modified.and.insert=수정/삭제
 modified=수정
+modified.requset=수정 요청
 deadline=마감일
 contant=내용
 attachments=첨부 파일
@@ -550,6 +551,7 @@ data.does.not.exist=데이터가 존재하지 않습니다.
 data.status.use=사용중
 data.status.unused=미사용
 data.status.etc=기타
+data.transform.save=위치/회전 변경
 
 # group
 group.key.empty=그룹Key를 입력하여 주십시오.
