관리자 사용자 메뉴 테스트 및 수정

--- a/ndtp-admin/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-admin/src/main/resources/messages/messages_ko.properties
@@ -247,6 +247,7 @@ user.group.file.save=파일저장
 
 #list-user-group
 user.group.usergroup=사용자 그룹
+user.group.name=사용자 그룹명
 user.group.cache.update=캐시 갱신
 user.group.check.mark=체크표시는 필수입력 항목입니다.
 user.group.add=추가
