--- a/ndtp-user/src/main/resources/messages/messages_ko.properties
+++ b/ndtp-user/src/main/resources/messages/messages_ko.properties
@@ -124,7 +124,7 @@ usersession.password.invalid=비밀번호가 일치하지 않습니다.
 usersession.status.invalid=관리자에게 사용자 상태를 확인하여 주십시오.
 usersession.failsignincount.invalid=사인인 실패 횟수를 초과하였습니다.
 usersession.lastsignin.invalid=마지막 접속일로부터 유효 기간이 지났습니다.
-usersession.role.invalid=관리자 페이지 접근 권한(ROLE)이 존재하지 않습니다.
+usersession.role.invalid=접근 권한(ROLE)이 존재하지 않습니다.
 
 signin.page.title=사인인 페이지 | Content Management System
 signin.id.title=아이디
